# prediccion-temperatura-cml-microprocesadores

./: README.md  pyproject.toml
.github/workflows/: cml.yaml
src/: cluster_plot.py  train.py
